--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
   "author": "sc.chan, elisajy",
   "license": "ISC",
   "dependencies": {
+    "@fastify/auth": "^5.0.2",
     "@fastify/autoload": "^6.0.0",
     "@fastify/cors": "^10.0.1",
+    "@fastify/jwt": "^9.0.2",
     "@fastify/multipart": "^9.0.1",
     "@fastify/mysql": "^5.0.1",
     "@fastify/sensible": "^6.0.0",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "fastify": "^5.0.0",
     "fastify-cli": "^7.0.1",
