--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fastify/multipart": "^9.0.1",
     "@fastify/mysql": "^5.0.1",
     "@fastify/sensible": "^6.0.0",
+    "base-64": "^1.0.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "fastify": "^5.0.0",
@@ -31,6 +32,8 @@
     "mysql2": "^3.11.3"
   },
   "devDependencies": {
+    "@types/base-64": "^1.0.2",
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^22.7.9",
     "nodemon": "^3.1.7"
   }
